syntax = "proto3";

option csharp_namespace = "GrpcPopulation";

service PopulationProvider {
	rpc GetPopulation (stream PopulationRequest) returns (PopulationResponse);
}

message PopulationRequest{
	string State = 1;
}

message PopulationResponse{
	int64 Count = 1;
}